--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cad-sys-web",
-  "version": "0.29.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.9",
@@ -28,9 +28,7 @@
     "primeng": "^6.0.1",
     "rxjs": "^6.3.2",
     "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.26",
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
@@ -52,8 +50,10 @@
     "typescript": "~2.7.2",
     "webpack-cli": "^3.1.0"
   },
+  "devDependencies": {},
   "engines": {
-    "node": ">=6.9.2"
+    "node": "10.12.0",
+    "npm": "6.4.1"
   },
   "scripts": {
     "ng": "ng",
@@ -61,6 +61,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   }
 }
